evaluation/rq1/sota/mythril/execution_logs/0x0x7F################################30cd2_poly.txt
The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x7F################################30cd2_poly/contracts/JulCard.sol:8:1: ParserError: Source "hardhat/console.sol" not found: File not found.
import "hardhat/console.sol";
^---------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x7F################################30cd2_poly/contracts/interfaces/IWETH9.sol:4:1: ParserError: Source "@openzeppelin/contracts/token/ERC20/IERC20.sol" not found: File not found.
import '@openzeppelin/contracts/token/ERC20/IERC20.sol';
^------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x7F################################30cd2_poly/contracts/libraries/TransferHelper.sol:57:35: ParserError: Expected ';' but got '{'
        (bool success, ) = to.call{value: value}(new bytes(0));
                                  ^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x7F################################30cd2_poly/contracts/uniswapv2/libraries/SafeMath.sol:1:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity >=0.6.12;
^-----------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.6.12"

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
